2006-09-04 09:34  ntiffin

	* ChangeLog, pgCocoaDBn.xcodeproj/ntiffin.mode1,
	  pgCocoaDBn.xcodeproj/ntiffin.pbxuser,
	  pgCocoaDBn.xcodeproj/project.pbxproj: Add fink based XCode
	  project.

2006-09-04 09:24  ntiffin

	* ChangeLog, Connection.m, ExplorerModel.h, ExplorerModel.m,
	  Field.m: Add retain to thread to fix crash.

2006-08-31 19:53  ntiffin

	* ChangeLog, Connection.h, Connection.m, ExplorerModel.h,
	  ExplorerModel.m, ExplorerNode.h, ExplorerNode.m, Schema.h,
	  Schema.m, UnitTest/pgCocoaDBSchemaTest.m: Fix for PGconn not
	  being thread safe. Migrate to new PQconnectdb API.

2006-08-30 16:26  ntiffin

	* ChangeLog, ExplorerModel.m, Schema.h, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Fix constraints, columns,
	  triggers.

2006-08-30 10:48  ntiffin

	* ChangeLog, Connection.h, Connection.m, DataSource.h, Database.h,
	  Databases.h, ExplorerModel.h, ExplorerModel.m, ExplorerNode.h,
	  Field.h, Fields.h, PGCocoaDB.h, Record.h, RecordSet.h, Schema.h,
	  Schema.m, Table.h, UnitTest-Info.plist,
	  UnitTest/pgCocoaDBSchemaTest.h, UnitTest/pgCocoaDBSchemaTest.m:
	  Restructure for schema threaded processing.

2006-08-26 07:25  ntiffin

	* ChangeLog, Connection.m, ExplorerModel.m, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Add some comments and reformat
	  functions.

2006-08-19 07:06  ntiffin

	* ChangeLog, ExplorerModel.m, Schema.h, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Add display of index column
	  names.

2006-08-13 18:50  ntiffin

	* ChangeLog, ExplorerModel.h, ExplorerModel.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Explorer API change to accomodate
	  preferences.

2006-08-12 11:38  ntiffin

	* ChangeLog, Connection.m, Databases.m, ExplorerModel.m,
	  ExplorerNode.m, Field.m, Fields.m, RecordSet.m, Schema.m,
	  Table.m: More memory cleanup.

2006-08-11 13:01  ntiffin

	* ChangeLog, Connection.h, Connection.m, DataSource.m, Database.m,
	  Databases.m, ExplorerModel.m, ExplorerNode.m, Field.m, Fields.m,